# lupin

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
docs/: BUILD.md
icons/: icon.icns
scripts/: build-clean-dmg.sh  build-dmg.sh  clean-build.sh  create-clean-dmg.sh  create-final-dmg.sh  fix-bundle-script.sh  fix-dmg.sh  patch-dmg-script.sh  post-build.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_launcher.rs  automation.rs  lib.rs  main.rs  process_disguise.rs  tray.rs
src/components/: AppLauncher.tsx  AutomationPanel.tsx  ProcessDisguise.tsx  StatusBar.tsx
src/hooks/: useTranslation.ts  useTrayEvents.ts
src/locales/: translations.ts
