[package]
name = "lupin"
version = "0.1.0"
description = "Anti-surveillance automation tool"
authors = ["Yang Gyunam <knyang@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/yang-gyunam/lupin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lupin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "test"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
objc = "0.2"

